# drims2_cells

./: README.md  deps.repos  deps.repos_bk
drims2_description/: CMakeLists.txt  package.xml
drims2_description/config/tiago_pro/: gripper_controller.yaml  motion_server_config.yaml  table_scene_params.yaml  tiago_utils_config.yaml
drims2_description/config/ur10e/: controllers.yaml  motion_server_config.yaml  rviz_config.rviz
drims2_description/config/ur10e_2f/: controllers.yaml  joint_limits.yaml  motion_server_config.yaml
drims2_description/config/ur5e/: controllers.yaml  motion_server_config.yaml  moveit_config.yaml  rviz_config.rviz
drims2_description/config/ur5e_2fg7/: controllers.yaml  initial_positions.yaml  motion_server_config.yaml  rviz_config.rviz
drims2_description/config/yumi/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  motion_server_config.yaml  rviz_config.rviz
drims2_description/launch/: ur5e_moveit.launch.py  ur5e_start.launch.py  view_ur.launch
drims2_description/launch/tiago_pro/: tiago_pro_gripper_controller.launch.py  tiago_pro_gripper_controller_sim.launch.py  tiago_pro_motion_server.launch.py  tiago_pro_start.launch.py
drims2_description/launch/ur10e/: robotiq_hande_urcap_adapter.launch.py  ur10e_control.launch.py  ur10e_motion_server.launch.py  ur10e_moveit.launch.py  ur10e_start.launch.py  view_ur.launch.py
drims2_description/launch/ur10e_2f/: ur10e_2f_camera_calibration.launch.py  ur10e_2f_control.launch.py  ur10e_2f_motion_server.launch.py  ur10e_2f_moveit.launch.py  ur10e_2f_start.launch.py  view_ur_2f.launch.py
drims2_description/launch/ur5e/: ur5e_control.launch.py  ur5e_motion_server.launch.py  ur5e_moveit.launch.py  ur5e_moveit_server.launch.py  ur5e_start.launch.py  view_ur.launch.py
drims2_description/urdf/ur5e/: prova.txt  (+1 more)
utils/smart_gripper_action_control/: CMakeLists.txt  package.xml
(+119 files in other folders)
