<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drims2_description</name>
  <version>0.0.0</version>
  <description>Package containing the robotic cells description</description>
  <maintainer email="cesare.tonola@cnr.it">CesareTonola</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ur_description</depend>
  <depend>robotiq_description</depend>
  <depend>robotiq_hande_driver</depend>
  <depend>onrobot_2fg7_gripper_description</depend>
  <depend>onrobot_driver</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
